[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/Menus/OptionsBack.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/backButtonUp.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Background/backButtonDn.png" type="Texture" id=3]
[ext_resource path="res://Fonts/8bitTitle.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Sprites/Background/resSettUp.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Background/resSettDn.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Background/clrDataUp.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background/clrDataDn.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 596.0
color = Color( 0.796875, 0.522949, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 508.0
margin/right = 409.0
margin/bottom = 638.0
alignment = 0
script/script = ExtResource( 1 )

[node name="Back" type="TextureButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 387.0
margin/bottom = 130.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="HSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
size_flags/stretch_ratio = 10.0
margin/left = 164.0
margin/top = 212.0
margin/right = 799.0
margin/bottom = 228.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
tick_count = 49
ticks_on_borders = false
focus_mode = 2

[node name="SoundVolume" type="Label" parent="HSlider"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -43.0
margin/right = 584.0
margin/bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Sound Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResetSettings" type="TextureButton" parent="HSlider"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 48.0
margin/right = 391.0
margin/bottom = 178.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="clearData" type="TextureButton" parent="HSlider"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 97.0
margin/right = 390.0
margin/bottom = 227.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="OptionsTitle" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 348.0
margin/top = 43.0
margin/right = 674.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 4 )
text = "Options"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Notifications" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 445.0
margin/top = 339.0
margin/right = 485.0
margin/bottom = 353.0
custom_colors/font_color = Color( 0.814196, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="released" from="VBoxContainer/Back" to="VBoxContainer" method="_on_Back_released"]

[connection signal="released" from="HSlider/ResetSettings" to="VBoxContainer" method="_on_ResetSettings_released"]

[connection signal="released" from="HSlider/clearData" to="VBoxContainer" method="_on_clearData_released"]


